--- a/styles/style.css
+++ b/styles/style.css
@@ -7,86 +7,127 @@ White: #FFF
 
 */
 
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
 
-.navbar{
-    background-color: white;
-    position: fixed;
-    right: 0px;
-    left: 0px;
-    padding: 10px;
+.navbar {
+  background-color: white;
+  position: fixed;
+  right: 0px;
+  left: 0px;
+  padding: 10px;
 }
 
-.imglogo{
-    width: 120px;
+.imglogo {
+  width: 120px;
 }
 
-.navbarlink{
-    float: right;
-    word-spacing: 6px;
-    margin-right: 10px;
-    padding: 10px;
+.navbarlink {
+  float: right;
+  word-spacing: 6px;
+  margin-right: 10px;
+  padding: 10px;
 }
 
-.imgbackground{
-    background-image: url('./../images/landing.jpg');
-    background-size: cover;
-    color: white;
-    max-width: 100%;
-    height: 350px;
-    text-align: center;
-    padding-top: 200px;
+.imgbackground {
+  background-image: url("./../images/landing.jpg");
+  background-size: cover;
+  color: white;
+  max-width: 100%;
+  height: 350px;
+  text-align: center;
+  padding-top: 200px;
 }
 
-.musictext{
-font-size: 50px;
-line-height: 0.3;
+.musictext {
+  font-size: 50px;
+  line-height: 0.3;
 }
 
-.linespace{
-    line-height: 0.2;
+.linespace {
+  line-height: 0.2;
 }
 
-.what{
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px;
-    text-decoration: #00B172 underline;
+.what {
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  text-decoration: #00b172 underline;
 }
 
-.imgs{
-    display: flex;
-    padding-top: 50px;
-    padding-left: 10px;
-    padding-right: 10px;
-
+.imgs {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+  padding-top: 40px;
 }
 
-.imgnota{
-    width: 80px;
+.imgnota {
+  width: 80px;
 }
 
-.nota{
-    border: 1px solid black;
-    text-align: center;
+.nota {
+  text-align: center;
 }
 
-.somimg{
-    width: 80px;
+.somimg {
+  width: 80px;
 }
 
-.som{
-    border: 1px solid black;
-    text-align: center;
+.som {
+  text-align: center;
 }
 
-.celimg{
-    width: 80px;
+.celimg {
+  width: 80px;
 }
 
-.cel{
-    border: 1px solid black;
-    text-align: center;
+.cel {
+  text-align: center;
+}
+
+.textgreen {
+  color: #00b172;
+  font-weight: bold;
+}
+
+.lastpage {
+  background-color: #00b172;
+}
+
+.img-device {
+  width: 90%;
+}
+
+.boxlast {
+  display: flex;
+  margin: 40px;
+}
+
+.title {
+  text-decoration: underline;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.sub-title {
+  color: white;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.textlastpage {
+  padding: 50px;
+}
+
+.titlelast {
+  padding-top: 30px;
+  margin-left: 50px;
+}
+
+.img-spotify {
+  width: 40%;
+  padding: 60px;
 }
