--- a/styles/style.css
+++ b/styles/style.css
@@ -115,11 +115,11 @@ body {
 .sub-title {
   color: white;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .textlastpage {
-  padding: 50px;
+  padding: 20px;
 }
 
 .titlelast {
@@ -128,6 +128,10 @@ body {
 }
 
 .img-spotify {
-  width: 40%;
+  width: 30%;
   padding: 60px;
+}
+
+.sub-text{
+  color: white;
 }
